# beluga

./: .clangd  .gitignore  CMakeLists.txt  build.bat  gen.bat  gensln.bat  run.bat  run_debug.bat  vs_attach.ps1
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
src/: Allocators.cpp  App.cpp  App.h  Camera.cpp  Camera.h  CommonTypes.h  Core.h  FreeCamera.cpp  FreeCamera.h  GuiPanel.cpp  GuiPanel.h  Input.cpp  Input.h  Matrix.cpp  Matrix.h  RenderScene.cpp  RenderScene.h  ShaderCompiler.cpp  ShaderCompiler.h  TriangleRenderer.cpp  TriangleRenderer.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  Window.cpp  Window.h  assert_utils.cpp  assert_utils.h  d3fwd.h  dx11.cpp  dx11.h  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  main.cpp  quat.cpp  quat.h  test.cpp
src/shaders/: lit_ps.hlsl  lit_vs.hlsl
